# MyBooleanLife

./: .gitignore  .pdm.toml  LICENSE  MyBooleanLife.json  README.md  pyproject.toml
MyBooleanLife/: db.py  main.py
frontend/: gatsby-config.js  package-lock.json  package.json
frontend/src/components/: block.js  layout.js  myAppBar.js  myBottomNav.js
frontend/src/pages/: about.js  index.js
frontend/src/styles/: pageStyle.js
